--- a/xmlapp/src/main/res/layout/credentials_layout.xml
+++ b/xmlapp/src/main/res/layout/credentials_layout.xml
@@ -1,43 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/credentialsLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/loginTypeSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/SubText"
-        android:text="@string/token_login"
-        android:layout_marginTop="@dimen/spacing_small"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerInfo"
-        />
+
 
     <LinearLayout
-        android:id="@+id/sessionSwitch"
+        android:id="@+id/sessionSwitchLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginTypeSwitch">
+        app:layout_constraintTop_toTopOf="parent">
 
 
-        <com.google.android.material.switchmaterial.SwitchMaterial
+
+        <com.google.android.material.materialswitch.MaterialSwitch
+            android:id="@+id/sessionSwitch"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="@dimen/spacing_tiny"
+          />
 
         <TextView
+            android:id="@+id/loginType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/SubText"
-            android:layout_marginStart="8dp"
-            android:text="@string/off"
+            android:text="@string/token_login"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/loginInfo"
+            app:layout_constraintTop_toTopOf="parent"
             />
 
 
@@ -48,17 +44,17 @@
         android:id="@+id/loginInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/sessionSwitch">
+        app:layout_constraintTop_toBottomOf="@+id/sessionSwitchLayout">
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/credentialGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="usernameTextField,passwordTextField"
+            app:constraint_referenced_ids="usernameTextFieldLayout,passwordTextFieldLayout"
             android:visibility="visible" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/usernameTextField"
+            android:id="@+id/usernameTextFieldLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_tiny"
@@ -68,6 +64,7 @@
             >
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/usernameTextField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
@@ -76,16 +73,19 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/passwordTextField"
+            android:id="@+id/passwordTextFieldLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
             android:hint="@string/password"
             android:layout_marginTop="@dimen/spacing_tiny"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:layout_constraintTop_toBottomOf="@+id/usernameTextField"
+            app:layout_constraintTop_toBottomOf="@+id/usernameTextFieldLayout"
             >
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passwordTextField"
+                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
@@ -93,7 +93,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tokenTextField"
+            android:id="@+id/tokenTextFieldLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/token"
@@ -104,6 +104,7 @@
             >
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tokenTextField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
@@ -116,7 +117,7 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/callerIdNameTextField"
+        android:id="@+id/callerIdNameTextFieldLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_tiny"
@@ -126,6 +127,7 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/callerIdNameTextField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
@@ -134,16 +136,17 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/callerIdNumberTextField"
+        android:id="@+id/callerIdNumberTextFieldLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/caller_id_number"
         android:layout_marginTop="@dimen/spacing_tiny"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:layout_constraintTop_toBottomOf="@+id/callerIdNameTextField"
+        app:layout_constraintTop_toBottomOf="@+id/callerIdNameTextFieldLayout"
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/callerIdNumberTextField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
@@ -151,30 +154,32 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/signInButton"
+        android:id="@+id/confirmButton"
         android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:text="@string/sign_in"
+        android:layout_height="36dp"
+        android:text="@string/confirm"
+        android:layout_marginTop="@dimen/spacing_medium"
+        android:textSize="12sp"
         android:textAllCaps="false"
-        android:layout_marginTop="@dimen/spacing_normal"
-        style="@style/AddProfileButton"
+        style="@style/CustomPrimaryButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextField"
+        app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextFieldLayout"
         />
 
     <Button
         android:id="@+id/cancelButton"
         android:layout_width="wrap_content"
-        android:layout_height="32dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="@dimen/spacing_tiny"
+        android:layout_marginTop="@dimen/spacing_medium"
         android:text="@string/cancel"
         android:textAllCaps="false"
-        android:layout_marginTop="@dimen/spacing_normal"
-        style="@style/TextButton"
-        android:textColor="@color/portal_blue"
-        android:layout_marginStart="@dimen/spacing_tiny"
-        app:layout_constraintStart_toEndOf="@+id/signInButton"
-        app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextField"
-        />
+        android:textSize="12sp"
+        style="@style/CustomOutlinedButton"
+        app:layout_constraintStart_toEndOf="@+id/confirmButton"
+        app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextFieldLayout" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
