--- a/xmlapp/src/main/res/layout/fragment_home_call.xml
+++ b/xmlapp/src/main/res/layout/fragment_home_call.xml
@@ -43,6 +43,7 @@
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/callInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
@@ -53,28 +54,39 @@
 
         </LinearLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/iconButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/fab_transformation_scrim_behavior"
-            app:srcCompat="@drawable/baseline_call_24"
-            app:tint="@color/black"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="@dimen/spacing_normal"
-            app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
-            />
-
         <LinearLayout
+            android:id="@+id/callIdleView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/spacing_tiny"
             android:layout_marginTop="@dimen/spacing_normal"
             android:orientation="horizontal"
             android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@+id/destinationInfo">
+            app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
+            android:visibility="visible">
+
+            <Button
+                style="@style/IconControlButton"
+                android:id="@+id/call"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:backgroundTint="@color/answer_green"
+                android:contentDescription="@string/fab_transformation_scrim_behavior"
+                app:icon="@drawable/baseline_call_24"
+                app:iconTint="@color/black" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/callActiveView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/spacing_tiny"
+            android:layout_marginTop="@dimen/spacing_normal"
+            android:orientation="horizontal"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
+            android:visibility="invisible">
 
             <Button
                 style="@style/IconControlButton"
@@ -108,12 +120,57 @@
                 app:icon="@drawable/speaker_24"
                 />
 
+        </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/callIncomingView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/spacing_tiny"
+            android:layout_marginTop="@dimen/spacing_normal"
+            android:orientation="horizontal"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
+            android:visibility="invisible">
+
+            <Button
+                style="@style/IconControlButton"
+                android:id="@+id/callReject"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:backgroundTint="@color/reject_red"
+                android:contentDescription="@string/fab_transformation_scrim_behavior"
+                app:icon="@drawable/baseline_call_end_24"
+                app:iconTint="@color/white"
+                android:layout_marginEnd="20dp"
+                />
+
+            <Button
+                style="@style/IconControlButton"
+                android:id="@+id/callAnswer"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:backgroundTint="@color/answer_green"
+                android:contentDescription="@string/fab_transformation_scrim_behavior"
+                app:icon="@drawable/baseline_call_24"
+                app:iconTint="@color/black"
+                android:layout_marginStart="20dp"/>
 
         </LinearLayout>
 
-
-
+        <Button
+            android:id="@+id/disconnect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/disconnect"
+            android:textAllCaps="false"
+            android:padding="1dp"
+            android:layout_marginTop="@dimen/spacing_large"
+            app:layout_constraintTop_toBottomOf="@+id/callIncomingView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/CustomPrimaryButton"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
