--- a/xml_app/src/main/res/layout/fragment_login_bottom_sheet.xml
+++ b/xml_app/src/main/res/layout/fragment_login_bottom_sheet.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/spacing_normal"
-    tools:context="org.telnyx.webrtc.xmlapp.login.LoginBottomSheetFragment">
+    tools:context="org.telnyx.webrtc.xmlapp.org.telnyx.webrtc.xml_app.login.LoginBottomSheetFragment">
 
 
     <RelativeLayout
