--- a/xml_app/src/main/res/navigation/nav_graph.xml
+++ b/xml_app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="org.telnyx.webrtc.xmlapp.login.LoginFragment"
+        android:name="org.telnyx.webrtc.xml_app.login.LoginFragment"
         android:label="Login"
         tools:layout="@layout/fragment_login">
         <action
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="org.telnyx.webrtc.xmlapp.home.HomeCallFragment"
+        android:name="org.telnyx.webrtc.xml_app.home.HomeCallFragment"
         android:label="Call"
         tools:layout="@layout/fragment_home_call" />
 
