--- a/samples/xml_app/src/main/res/layout/activity_main.xml
+++ b/samples/xml_app/src/main/res/layout/activity_main.xml
@@ -8,48 +8,56 @@
     android:background="@color/background_color"
     tools:context="org.telnyx.webrtc.xml_app.MainActivity">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/topGuideLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.25"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/bottomGuideLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.84"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:contentDescription="@string/dash"
+        android:src="@drawable/telnyx_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/appStatus"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="24dp"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:contentDescription="@string/dash"
-            android:src="@drawable/telnyx_logo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+        android:paddingStart="@dimen/spacing_normal"
+        android:paddingEnd="@dimen/spacing_normal"
+        app:layout_constraintTop_toBottomOf="@id/topGuideLine">
 
         <TextView
             android:id="@+id/loginInfo"
             style="@style/HeaderText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="108dp"
             android:text="@string/home_info"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/socketLabel"
             style="@style/SubText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/spacing_normal"
             android:text="@string/socket"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/loginInfo" />
 
@@ -57,15 +65,11 @@
             android:id="@+id/socketStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/socketLabel">
-
 
             <View
                 android:id="@+id/socketStatusIcon"
@@ -83,6 +87,34 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/loginInfo" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/sessionInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/spacing_normal"
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/socketStatus">
+
+            <TextView
+                style="@style/SubText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/session_id"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/loginInfo" />
+
+            <TextView
+                android:id="@+id/sessionId"
+                style="@style/SubText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_tiny"
+                android:text="@string/dash"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/loginInfo" />
 
         </LinearLayout>
 
@@ -90,7 +122,7 @@
             android:id="@+id/callStateInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_small"
+            android:layout_marginTop="@dimen/spacing_normal"
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sessionInfo">
@@ -114,37 +146,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/sessionInfo" />
 
         </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/sessionInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_small"
-            android:orientation="vertical"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/socketStatus">
-
-
-            <TextView
-                style="@style/SubText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/session_id"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/loginInfo" />
-
-            <TextView
-                android:id="@+id/sessionId"
-                style="@style/SubText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacing_tiny"
-                android:text="@string/dash"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/loginInfo" />
-
-        </LinearLayout>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -183,13 +184,28 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/bottomButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/connect"
+        android:textAllCaps="false"
+        android:padding="1dp"
+        android:layout_marginStart="@dimen/spacing_normal"
+        android:layout_marginEnd="@dimen/spacing_normal"
+        app:layout_constraintTop_toBottomOf="@+id/bottomGuideLine"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/CustomPrimaryButton" />
+
     <TextView
         android:id="@+id/versionInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Production TelnyxSDK [v1.2.0] - App [v1.2.0]"
-        android:textColor="#525252"
+        android:text="@string/bottom_bar_production_text"
+        style="@style/SubText"
         android:layout_marginBottom="16dp"
+        app:layout_constraintTop_toBottomOf="@id/bottomButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
