--- a/samples/xml_app/src/main/res/layout/profile_list.xml
+++ b/samples/xml_app/src/main/res/layout/profile_list.xml
@@ -8,17 +8,22 @@
         android:id="@+id/profile_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/profile_list_background"
         app:layout_constraintEnd_toStartOf="@+id/editProfile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/deleteProfile"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:paddingStart="@dimen/spacing_tiny"
+        android:paddingEnd="@dimen/spacing_tiny"
+        android:paddingTop="@dimen/spacing_mega_tiny"
+        android:paddingBottom="@dimen/spacing_mega_tiny"/>
 
     <ImageButton
         android:id="@+id/editProfile"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:contentDescription="@string/delete"
-        android:src="@drawable/baseline_edit_24"
+        android:src="@drawable/ic_edit"
         android:background="@drawable/circular_background"
         app:layout_constraintEnd_toStartOf="@+id/deleteProfile"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +35,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:contentDescription="@string/delete"
-        android:src="@drawable/delete"
+        android:src="@drawable/ic_delete"
         android:background="@drawable/circular_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
