--- a/samples/xml_app/src/main/res/layout/credentials_layout.xml
+++ b/samples/xml_app/src/main/res/layout/credentials_layout.xml
@@ -5,8 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
-
-
     <LinearLayout
         android:id="@+id/sessionSwitchLayout"
         android:layout_width="wrap_content"
@@ -16,8 +14,6 @@
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-
 
         <com.google.android.material.materialswitch.MaterialSwitch
             android:id="@+id/sessionSwitch"
@@ -159,27 +155,27 @@
     <Button
         android:id="@+id/confirmButton"
         android:layout_width="wrap_content"
-        android:layout_height="36dp"
+        android:layout_height="@dimen/button_height"
         android:text="@string/confirm"
         android:layout_marginTop="@dimen/spacing_medium"
         android:textSize="12sp"
         android:textAllCaps="false"
         style="@style/CustomPrimaryButton"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextFieldLayout"
         />
 
     <Button
         android:id="@+id/cancelButton"
         android:layout_width="wrap_content"
-        android:layout_height="36dp"
-        android:layout_marginStart="@dimen/spacing_tiny"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginEnd="@dimen/spacing_tiny"
         android:layout_marginTop="@dimen/spacing_medium"
         android:text="@string/cancel"
         android:textAllCaps="false"
         android:textSize="12sp"
         style="@style/CustomOutlinedButton"
-        app:layout_constraintStart_toEndOf="@+id/confirmButton"
+        app:layout_constraintEnd_toStartOf="@+id/confirmButton"
         app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextFieldLayout" />
 
 
