--- a/samples/xml_app/src/main/res/values/colors.xml
+++ b/samples/xml_app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="reject_red">#ff4d4f</color>
     <color name="background_color">#FEFDF5</color>
     <color name="colorPrimary">#1D1D1D</color>
-    <color name="colorSecondary">#E6E3D3</color>
+    <color name="colorSecondary">#F5F3E4</color>
     <color name="colorPrimaryVariant">#525252</color>
     <color name="mainTextColor">#272727</color>
     <color name="portal_blue">#3434EF</color>
